--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
   <name>Projeto_de_Programacao_N02_Grupo3</name>
 
   <properties>
-    <java.version>21</java.version>
-    <javafx.version>21.0.1</javafx.version>
+    <java.version>17</java.version>
+    <javafx.version>17.0.8</javafx.version>
   </properties>
 
   <dependencies>
@@ -45,6 +45,12 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
 
