--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,28 @@
 spring.application.name=Projeto_de_Programacao_N02_Grupo3
-server.port=9090
-spring.datasource.url=jdbc:h2:file:./data/veridiadb
+server.port=0
+
+# H2 Database Configuration (arquivo persistente)
+spring.datasource.url=jdbc:h2:file:./data/veridiadb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=dev
-spring.datasource.password=123456
+spring.datasource.username=DEV
+spring.datasource.password=
 
-
+# H2 Console
 spring.h2.console.enabled=true
-
 spring.h2.console.path=/h2-console
 
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Data Initialization
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=false
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.encoding=UTF-8
+
+# Logging
+logging.level.root=INFO
+logging.level.br.com.unit=INFO
